--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header12 cid-rRmZodlZen mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="header12 cid-rRmZodlZen mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
@@ -82,9 +82,7 @@
     <div class="container  ">
             <div class="media-container">
                 <div class="col-md-12 align-center">
-                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">
-                        INTRO WITH ICONS
-                    </h1>
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">Robs's project<br></h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
                         Full screen intro with background image, color overlay and icons
                     </p>
